[package]
name = "rust-bottle"
version = "0.1.0"
edition = "2021"
authors = ["thanos vassilakis"]
license = "MIT"
description = "Rust implementation of Bottle protocol - layered message containers with encryption and signatures"
repository = "https://github.com/thanos/rust-bottle"

[dependencies]
# Cryptographic primitives
ring = "0.17"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
ecdsa = "0.16"
p256 = { version = "0.13", features = ["ecdh", "arithmetic"] }
p384 = { version = "0.13", features = ["ecdh", "arithmetic"] }
p521 = { version = "0.13", features = ["ecdh", "arithmetic"] }
rsa = "0.9"
x25519-dalek = "1.0"
sha2 = "0.10"
sha3 = "0.10"
rand = "0.8"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
bincode = "1.3"
hex = "0.4"
thiserror = "1.0"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
# Post-quantum cryptography (optional features)
# Note: pqcrypto-kyber v0.5 has a bug where AVX2 FFI functions are referenced on non-x86
# architectures (like AArch64/macOS ARM), causing compilation failures. On AArch64, the
# crate should automatically use the "clean" (generic/portable) implementation via
# PQCLEAN_KYBER*_CLEAN_* functions, but the compilation bug prevents this. ML-KEM is in
# a separate feature flag to allow the library to compile without it on affected platforms.
# Enable signatures only: cargo build --features post-quantum
# Enable everything: cargo build --features post-quantum,ml-kem
pqcrypto-kyber = { version = "0.5", optional = true }  # ML-KEM (CRYSTALS-Kyber) - requires ml-kem feature
pqcrypto-dilithium = { version = "0.5", optional = true }  # ML-DSA (CRYSTALS-Dilithium)
pqcrypto-sphincsplus = { version = "0.5", optional = true }  # SLH-DSA (SPHINCS+)
pqcrypto-traits = { version = "0.3", optional = true }  # Traits for PQC types

[features]
default = []
post-quantum = ["pqcrypto-dilithium", "pqcrypto-sphincsplus", "pqcrypto-traits"]  # ML-DSA and SLH-DSA only
ml-kem = ["pqcrypto-kyber"]  # ML-KEM encryption (may fail on macOS/ARM due to AVX2)

[dev-dependencies]
criterion = "0.5"

[[test]]
name = "bottle"
path = "tests/bottle_test.rs"

[[test]]
name = "ecdh"
path = "tests/ecdh_test.rs"

[[test]]
name = "aliceandbob"
path = "tests/aliceandbob_test.rs"

[[test]]
name = "pqc"
path = "tests/pqc_test.rs"
