[package]
name = "rust-bottle"
version = "0.1.0"
edition = "2021"
authors = ["thanos vassilakis"]
license = "MIT"
description = "Rust implementation of Bottle protocol - layered message containers with encryption and signatures"
repository = "https://github.com/thanos/rust-bottle"

[dependencies]
# Cryptographic primitives
ring = "0.17"
ed25519-dalek = { version = "2.1", features = ["rand_core", "pkcs8"] }
ecdsa = "0.16"
p256 = { version = "0.13", features = ["ecdh", "arithmetic", "pkcs8"] }
p384 = { version = "0.13", features = ["ecdh", "arithmetic"] }
p521 = { version = "0.13", features = ["ecdh", "arithmetic"] }
rsa = { version = "0.9", features = ["sha2"] }
x25519-dalek = "1.0"
sha2 = "0.10"
sha3 = "0.10"
rand = "0.8"
rand_core = "0.6"  # For compatibility with rand 0.8 and rsa crate
# ml-kem uses rand_core 0.9, we add it as a direct dependency for the adapter
# Cargo will resolve both versions (0.6 for rand/rsa, 0.9 for ml-kem)
rand_core_09 = { version = "0.9", package = "rand_core", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
bincode = "1.3"
hex = "0.4"
thiserror = "1.0"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
# PKIX/PKCS#8 key serialization
pkcs8 = { version = "0.10", features = ["pem", "std"] }
spki = { version = "0.7", features = ["pem", "std"] }
der = { version = "0.7", features = ["std"] }
const-oid = { version = "0.9", features = ["db"] }
pem = "2.0"
# Post-quantum cryptography (optional features)
# ML-KEM uses RustCrypto's ml-kem crate (pure Rust, works on all platforms including macOS/ARM)
# Enable signatures only: cargo build --features post-quantum
# Enable everything: cargo build --features post-quantum,ml-kem
ml-kem = { version = "0.3.0-pre.2", optional = true }  # ML-KEM (FIPS 203) - requires ml-kem feature
zerocopy = { version = "0.7", optional = true }  # For ml-kem IntoBytes trait
hybrid-array = { version = "0.4", optional = true }  # For ml-kem Array type
typenum = { version = "1.17", optional = true }  # For ml-kem type-level numbers
pqcrypto-dilithium = { version = "0.5", optional = true }  # ML-DSA (CRYSTALS-Dilithium)
pqcrypto-sphincsplus = { version = "0.5", optional = true }  # SLH-DSA (SPHINCS+)
pqcrypto-traits = { version = "0.3", optional = true }  # Traits for PQC types

[features]
default = []
post-quantum = ["pqcrypto-dilithium", "pqcrypto-sphincsplus", "pqcrypto-traits"]  # ML-DSA and SLH-DSA only
ml-kem = ["dep:ml-kem", "dep:rand_core_09", "dep:zerocopy", "dep:hybrid-array", "dep:typenum"]  # ML-KEM encryption (pure Rust, works on all platforms including macOS/ARM)

[dev-dependencies]
criterion = "0.5"

[[test]]
name = "bottle"
path = "tests/bottle_test.rs"

[[test]]
name = "ecdh"
path = "tests/ecdh_test.rs"

[[test]]
name = "aliceandbob"
path = "tests/aliceandbob_test.rs"

[[test]]
name = "pqc"
path = "tests/pqc_test.rs"

[[test]]
name = "pkix"
path = "tests/pkix_test.rs"

[[test]]
name = "rsa"
path = "tests/rsa_test.rs"

[[test]]
name = "short_buffer"
path = "tests/short_buffer_test.rs"

# No patches needed - ml-kem is pure Rust and works on all platforms
